hphp/test/slow/phpism/disable_static_closures.php.expectf
Fatal error: Static closures are not supported in Hack in %s on line 16
